hotfix(StopPageRedesign): style fix for text alignment

--- a/apps/site/assets/css/_stop-card.scss
+++ b/apps/site/assets/css/_stop-card.scss
@@ -225,6 +225,7 @@ $radius: 4px;
 
   .departure-card__content {
     align-items: center;
+    align-self: center;
     display: flex;
     flex-grow: 1;
     flex-wrap: wrap;
@@ -367,6 +368,7 @@ $radius: 4px;
 
   .btn {
     align-items: baseline;
+    background: none;
     display: flex;
     gap: .5em;
     padding: $base-spacing-sm;
